# pidr

./: .gitignore  README.md  requirements.txt
agent/: __init__.py  apply_action.py  baselines.py  env.py  evaluate.py  state.py  train.py
agent/loaders/: five_g3e.py  physics.py
ditto/FiveG_network/: create_ditto_nodes.py  ditto_ns3_sender.py  ditto_topology_2gnb_10ue.json  docker-compose.ditto.yml  omnet_to_ditto_sync.py
ns3/FiveG_digital_twin/: CMakeLists.txt  FiveG_digital_twin.cc  debug-functions.cc  debug-functions.h  metrics-calc.cc  metrics-calc.h  third_party_responder.py
omnet/: inet-4.5.4  simu5g-1.4.1
results/: baselines.json  best_action.json  fidelity_report.json  learning_curve.csv
results/exp10_long300k/: best_action.json  learning_curve.csv
results/exp1_unsigned_obs/: best_action.json  learning_curve.csv
results/exp2_5g3e_scratch/: best_action.json  learning_curve.csv
results/exp3_fixed_ue_tx/: best_action.json  learning_curve.csv
results/exp3b_fixed_ue_tx/: best_action.json  learning_curve.csv
results/exp4_reward_thr/: best_action.json  learning_curve.csv
results/exp5_reward_norm/: best_action.json  learning_curve.csv
results/exp6_mlp256/: best_action.json  learning_curve.csv
results/exp7_aggressive_lr/: best_action.json  learning_curve.csv
results/exp8a_d100/: best_action.json  learning_curve.csv
results/exp8b_d500/: best_action.json  learning_curve.csv
results/exp9_multi_site/: best_action.json  learning_curve.csv
results/session_2gnb_10ue/: baselines.json  best_action.json  (+4 more)
scripts/: tune_network_params.py
(+21 files in other folders)
